--- a/src/main/resources/templates/invoice/invoiceReview.html
+++ b/src/main/resources/templates/invoice/invoiceReview.html
@@ -68,12 +68,11 @@
             <div class="flex justify-between items-center mb-8 animate__animated animate__fadeIn">
                 <div>
                     <h2 class="text-3xl font-bold text-white">Review Invoice</h2>
-<!--                    <p class="text-gray-400 mt-1">Enter client information, amount, and due date</p>-->
                 </div>
-<!--                <button onclick="window.history.back()" class="btn-secondary flex items-center px-4 py-2 rounded-lg text-white font-medium">-->
-<!--                    <span class="material-icons mr-2">arrow_back</span>-->
-<!--                    Back-->
-<!--                </button>-->
+                <button onclick="window.history.back()" class="btn-secondary flex items-center px-4 py-2 rounded-lg text-white font-medium">
+                    <span class="material-icons mr-2">arrow_back</span>
+                    Back
+                </button>
             </div>
             <form>
 
@@ -122,7 +121,7 @@
                     <div>
                         <label class="form-label block text-sm mb-1">Amount</label>
                         <div class="flex">
-                            <span class="inline-flex items-center px-3 rounded-l-lg bg-gray-700 text-gray-300 text-sm">$</span>
+                            <span class="inline-flex items-center px-3 rounded-l-lg bg-gray-700 text-gray-300 text-sm">₦</span>
                             <input name="amount" th:value="${invoiceData.amount}"  type="number" class="form-input flex-1 rounded-r-lg rounded-l-none"
                                    placeholder="0.00" step="0.01" min="0" required readonly>
                         </div>
@@ -139,15 +138,14 @@
                 </div>
             </div>
             <!-- hidden input -->
-             <input id="processId" name="processId" type="hidden" th:value="${invoiceData.processId}">
+            <input type="hidden" name="taskId" th:value="${invoiceData.taskId}">
 
             <!-- Action Buttons -->
             <div class="flex justify-end space-x-3 fade-in" style="animation-delay: 0.2s">
                 <button type="button"
-                        hx-post="/invoice/invoice-review"
+                        hx-post="/invoice/submit-review"
                         hx-trigger="click"
                         hx-disabled-elt="this"
-                        hx-include="#processId"
                         hx-vals='{"status": "declined"}'
                         hx-swap="outerHTML"
                         hx-target="#mainBody"
@@ -156,7 +154,7 @@
                     Decline
                 </button>
                 <button type="button"
-                        hx-post="/invoice/invoice-review"
+                        hx-post="/invoice/submit-review"
                         hx-trigger="click"
                         hx-disabled-elt="this"
                         hx-vals='{"status":"approved"}'
