invoice review home updated

--- a/src/main/resources/templates/invoice/invoiceReviewHome.html
+++ b/src/main/resources/templates/invoice/invoiceReviewHome.html
@@ -181,7 +181,7 @@
                         <td class="review-td" th:text="${invoice.dueDate}"></td>
                         <td class="review-td">
                             <a style="background:#1d4ed8; padding:6px;border-radius:6px;cursor:pointer;"
-                               th:href="@{/invoice/invoice-review/{id}(id=${invoice.taskId})}">Edit Details</a>
+                               th:href="@{/invoice/invoice-review/{id}(id=${invoice.taskId})}">View Details</a>
                         </td>
                     </tr>
                 </tbody>
