--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -6,6 +6,9 @@
     <title>Chat App</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
+        #userOnlineStatus{
+          margin-right: 10px;
+        }
         #support-chat-btn {
             display: none
         }
