--- a/src/main/resources/templates/chat/header.html
+++ b/src/main/resources/templates/chat/header.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-between p-3 md:p-4 bg-gray-800 border-b border-gray-700" id="chatHeaderDefault">
+<div class="chat-header flex items-center justify-between p-3 md:p-4 bg-gray-800 border-b border-gray-700" id="chatHeaderDefault">
     <div class="flex items-center">
         <div class="relative">
             <div class="w-8 h-8 md:w-10 md:h-10 rounded-full mr-2 md:mr-4 bg-gray-600 flex items-center justify-center">
@@ -12,7 +12,7 @@
 </div>
 
 <!-- User chat header (hidden by default) -->
-<div class="flex items-center justify-between p-3 md:p-4 bg-gray-800 border-b border-gray-700 hidden" id="chatHeaderUser">
+<div class="chat-header flex items-center justify-between p-3 md:p-4 bg-gray-800 border-b border-gray-700 hidden" id="chatHeaderUser">
     <div class="flex items-center">
         <div class="relative">
             <div id="userAvatarContainer" class="w-8 h-8 md:w-10 md:h-10 rounded-full mr-2 md:mr-4 bg-blue-500 flex items-center justify-center text-white">
@@ -39,7 +39,7 @@
 </div>
 
 <!-- Group chat header (hidden by default) -->
-<div class="flex items-center justify-between p-3 md:p-4 bg-gray-800 border-b border-gray-700 hidden" id="chatHeaderGroup">
+<div class="chat-header flex items-center justify-between p-3 md:p-4 bg-gray-800 border-b border-gray-700 hidden" id="chatHeaderGroup">
     <div class="flex items-center">
         <div class="relative">
             <div class="group-name-avatar" id="groupNameAvatar">
