--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -74,12 +74,14 @@
                 <span>Dashboard</span>
             </a>
 
-            <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/tasks}"
-               th:classappend="${currentPath == '/tasks'} ? ' bg-blue-600'" >
+            <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg"
+               th:each="name : ${processNames}"
+               th:href="@{'/processes/' + ${name.processKey}}">
                 <span class="material-icons mr-3">task_alt</span>
-                <span>Tasks</span>
+                <span th:text="${name.processName}">Tasks</span>
             </a>
-            <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg"  th:href="@{/processes}"
+
+            <!--<a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg"  th:href="@{/processes}"
                th:classappend="${currentPath == '/processes'} ? ' bg-blue-600'">
                 <span class="material-icons mr-3">sync_alt</span>
                 <span>Cases</span>
@@ -88,17 +90,17 @@
                th:classappend="${currentPath == '/forms'} ? ' bg-blue-600'">
                 <span class="material-icons mr-3">note_add</span>
                 <span>Task Forms</span>
-            </a>
+            </a>-->
             <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/report}"
                th:classappend="${currentPath == '/report'} ? ' bg-blue-600'">
                 <span class="material-icons mr-3">bar_chart</span>
                 <span>Reports</span>
             </a>
-            <a th:if="${session.isAdmin}" class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/users}"
+            <!--<a th:if="${session.isAdmin}" class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/users}"
                th:classappend="${currentPath == '/users'} ? ' bg-blue-600'">
                 <span class="material-icons mr-3">group</span>
                 <span>User Management</span>
-            </a>
+            </a>-->
             <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/invoice}"
                th:classappend="${currentPath == '/invoice'} ? ' bg-blue-600'">
                 <span class="material-icons mr-3">receipt_long</span>
