--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -31,6 +31,14 @@
                                 type="text"
                         />
                     </div>
+                    <a th:href="@{/case-tags}">
+                        <button
+                                class="bg-primary hover:bg-primary-dark flex items-center gap-2 px-4 py-2 rounded-lg text-white font-semibold transition-colors duration-200"
+                        >
+                            <span class="material-icons">label</span>
+                            Case Tags
+                        </button>
+                    </a>
                     <a th:href="@{/addFile}">
                         <button
                                 class="btn-primary2 flex items-center gap-2 px-4 py-2 rounded-lg text-white font-semibold"
