--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -6,6 +6,13 @@ body {
         .sidebar {
             background-color: #1E293B;
         }
+        .submenu {
+                    transition: all 0.3s ease;
+                    overflow: hidden;
+                }
+                .rotate-90 {
+                    transform: rotate(90deg);
+                }
 
         .upload-btn-primary {
         background-color: #3b82f6;
