--- a/src/main/resources/templates/form/list.html
+++ b/src/main/resources/templates/form/list.html
@@ -7,7 +7,7 @@
       <h2 class="text-2xl md:text-3xl font-bold text-white">Forms</h2>
       <p class="text-slate-400 mt-1">Monitor and manage all your forms here</p>
     </div>
-    <a style="text-decoration:none" href="/forms/new">
+    <a style="text-decoration:none" th:href="@{'/forms/new/'+${processKey}}">
       <button class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 md:py-3 md:px-6 rounded-lg flex items-center w-full md:w-auto justify-center dashboard-start-process-btn">
         <span class="material-icons mr-2">add</span>
         Create New
